Updated for newer macports. Adding quartz

--- a/PackageMaker/Tiger/InstallationCheck.strings
+++ b/PackageMaker/Tiger/InstallationCheck.strings
@@ -1,2 +1,2 @@
-"16" = "You must be running OS X 10.4.11";
+"16" = "You must be running OS X 10.4.11 or higher (Shuriken)";
 "17" = "You must have Xcode 2.5 installed";
